2011-10-06  Colomban Wendling  <colomban(at)geany(dot)org>

 * autogen.sh, configure.ac:
   Modernize configure.ac a bit.


2011-10-05  Nick Treleaven  <nick(dot)treleaven(at)btinternet(dot)com>

 * tagmanager/lregex.c, tagmanager/php.c:
   Fix CTags bug 2970274 - when using addCallbackRegex the callback 
   receives less than the number of matches. The number is still not 
   correct (due to POSIX regex compatibility) but at least includes 
   all non-empty matches now.
   http://sourceforge.net/tracker/index.php?func=detail&aid=2970274
   &group_id=6556&atid=106556


2011-10-04  Nick Treleaven  <nick(dot)treleaven(at)btinternet(dot)com>

 * tagmanager/js.c:
   Update from CTags SVN jscript.c.


2011-10-03  Colomban Wendling  <colomban(at)geany(dot)org>

 * TODO, configure.ac, doc/geany.txt, geany.nsi, geany_private.rc,
   src/geany.h, win32-config.h, wscript:
   Post-release version bump.
 * src/callbacks.c:
   Fix "toggle case" when there is no selection.


2011-10-03  Nick Treleaven  <nick(dot)treleaven(at)btinternet(dot)com>

 * Merge branches/unstable:
 - tagmanager/php.c:
   Fix parsing keyword-qualified functions strictly, e.g. don't 
   parse 'staticfunction' or 'fatfunction'.
 - src/utils.c, src/utils.h, src/editor.c:
   Use GRegex for snippet indentation replacement - fixes wrong 
   behaviour with Mac line endings.
 - tagmanager/lregex.c, TODO:
   Use GRegex for CTags instead of POSIX regex - GRegex is more 
   powerful. This also fixes a (HTML) performance issue on Windows. 
   Geany will now print a debug warning when using the "b" CTags 
   regex flag option for non-extended syntax. This is not currently 
   used by Geany's parsers.
   Note: GNU regex can't be removed yet as it's still used elsewhere 
   by Geany.
 - src/build.c, doc/pluginsignals.c:
   When saving on build, prompt for a filename if necessary.
   Emit the "build-start" signal only if saving succeeds.
 - src/build.c: