@@ -2,6 +2,9 @@
 
  * autogen.sh, configure.ac:
    Modernize configure.ac a bit.
+ * configure.ac, m4/geany-revision.m4:
+   Extract some configure logic to a separate file for better
+   readability.
 
 
 2011-10-05  Nick Treleaven  <nick(dot)treleaven(at)btinternet(dot)com>
